--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,9 @@ code/__pycache__
 code/log
 code/tmp
 code/config.py
-extra
+
+extra/
+
+assets/firefox/firefox-120.0.1/
+assets/firefox/geckodriver-v0.33.0-linux64/
+
